# vinterviken_flask

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/vinterviken_flask/: create_db.py  htmx.py
src/vinterviken_flask/templates/: index.html
src/vinterviken_flask/templates/partials/: colordivnext.html
vinterviken_flask/: __init__.py  db.py  htmx.py  models.py  vinterviken.py
vinterviken_flask/templates/: courtnext.html  courtnow.html  index.html
vinterviken_flask/templates/partials/: all_courts.html  colordiv.html  colordivnext.html  court.html  court_context.html  court_update.html
