[project]
name = "vinterviken-flask"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Karl Ericsson", email = "git@services.karlericsson.com" }
]
dependencies = [
    "flask~=2.3.2",
    "flask-sqlalchemy~=3.0.5",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
