[project]
name = "vinterviken-flask"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Karl Ericsson", email = "git@services.karlericsson.com" }
]
dependencies = [
    "flask~=2.3.2",
    "flask-sqlalchemy~=3.0.5",
    "jinja-partials~=0.1.1",
    "gunicorn~=20.1.0",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["ALL"]
ignore = [
  # Ignore missing docstring warnings
  "D",
  # Ignore missing type annotations
  "ANN",
  # Ignore warning of commented-out code
  "ERA",
  # Ignore flake8-use-pathlib
  "PTH",
  # Allow print statements
  "T",
  # Ignore missing issue link on TODO:
  #"TD003"
  # Unnecessary open mode parameters
  "UP015",
  ]
unfixable = [
  # Don't touch unused imports
  "F401",
]
